--- a/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
 
     @RenderSection("health", required: false)
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
+    <link rel="dns-prefetch" href="https://googleads.g.doubleclick.net">
     <link rel="dns-prefetch" href="https://www.facebook.com/">
+    <link rel="dns-prefetch" href="https://www.youtube.com/">
     <link href='/static/css' rel='stylesheet' type='text/css'>
     <script src="/Scripts/jquery-1-10.js"></script>
     <script>
@@ -48,11 +51,14 @@
         <script>
             preloaderBg = document.getElementById('page_preloader__bg');
             preloaderImg = document.getElementById('page_preloader__img');
-
-            window.addEventListener('load', function () {
+            $(window).load(function () {
                 preloaderBg.classList.add("off");
                 preloaderImg.classList.add("off");
             });
+            //window.addEventListener('load', function () {
+            //    preloaderBg.classList.add("off");
+            //    preloaderImg.classList.add("off");
+            //});
 
         </script>
         @Html.Partial("_partial/_MainHeader_1")
@@ -73,8 +79,8 @@
         <link href="/assets/responsive.css" rel="stylesheet" type="text/css" media="all" />
         <link href="http://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&amp;subset=cyrillic" rel="stylesheet" type="text/css">S
     </noscript>
-    <script  defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>
-    <script src="/assets/js/features.js"  defer="defer" crossorigin="anonymous"></script>    
+    @*<script  defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>*@
+    @*<script src="/assets/js/features.js"  defer="defer" crossorigin="anonymous"></script>*@    
     <script id="sections-script" data-sections="index-slideshow-full-width,index-banners-countdown-custom,index-logo-list,header,footer" defer="defer" src="/assets/shop.js"></script>
     <h1 id="heading1" style="display:none;">
         @commonInfo.Desc
